@@ -92,6 +92,17 @@
        </tr>
 
        <tr valign="top">
+       <th align="right"> ETag </th>
+       <td colspan="3">
+         <input type="text"
+                name="etag_func"
+                value="&dtml-getETagFunc;"
+                size="40">
+       </td>
+       </tr>
+
+
+       <tr valign="top">
        <td><br /></td>
        <td colspan="3">
          <input type="submit" name="updatePolicy:method" value=" Change ">
@@ -179,6 +190,13 @@
        <th align="right"> Vary </th>
        <td colspan="3">
          <input type="text" name="vary" size="40">
+       </td>
+       </tr>
+
+       <tr valign="top">
+       <th align="right"> ETag </th>
+       <td colspan="3">
+         <input type="text" name="etag_func" size="40">
        </td>
        </tr>
 
